--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @tailwind base;
 @tailwind components;
@@ -15,7 +13,7 @@
 @layer components {
   /*header*/
   .header-navigation {
-    @apply text-white hover:bg-link-hover p-1 text-base capitalize transition-all duration-300 ease-linear rounded-md;
+    @apply text-white hover:bg-link-hover p-1 text-base transition-all duration-300 ease-linear rounded-md;
   }
 
   /*forms*/
@@ -44,3 +42,14 @@
   @apply flex justify-center items-center w-48 h-12 border border-solid border-main-color  text-main-color uppercase font-bold bg-transparent rounded-lg hover:bg-main-color hover:text-white transition-all duration-300 ease-linear;
 }
 
+/* Loader */
+.Loader__content {
+  @apply border rounded-full w-10 h-10 mx-auto border-gray-300 border-t-2 border-b-2 animate-spin;
+}
+
+
+
+
+.w-custom {
+  width: calc(50% - 0.35rem); /* Розраховуємо ширину, віднімаючи половину відступу gap-2 */
+}
